create all services and controllers

--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
+    "eslint": "^8.21.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19",
     "typescript": "^4.7.4"
   }
